# coze-mcp-server

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
src/coze_mcp_server/: __init__.py  __main__.py  server.py
src/mcp_coze_server/: __init__.py  __main__.py  server.py  version.py
