[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-coze-server"
version = "0.1.0"
authors = [
    { name = "shizeying", email = "shizeying@example.com" }
]
description = "A MCP server implementation for Coze API"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "cozepy @ git+https://github.com/shizeying/coze-py.git@v0.13.1.post1",
    "mcp>=1.6.0",
    "pydantic>=2.0.0",
]

[project.urls]
"Homepage" = "https://github.com/shizeying/coze-mcp-server"
"Bug Tracker" = "https://github.com/shizeying/coze-mcp-server/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"] 